added images & completed navbar section

--- a/AdminDashBoard/index.html
+++ b/AdminDashBoard/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale1.0">
     <title>AVC Admin_Dashboard</title>
     <!-- MATERIAL ICONS CDN -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp">
     <!-- GOOGLE FONTS (POPPINS)-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,6 +15,31 @@
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-
+    <nav>
+        <div class="container">
+            <img src="assets/images/Asset%201x.png" alt="" class="logo">
+            <div class="search-bar">
+                <span class="material-icons-sharp">search</span>
+                <input type="search">
+            </div>
+            <div class="profile-area">
+                <div class="theme-btn">
+                    <span class="material-icons-sharp">light_mode</span>
+                    <span class="material-icons-sharp">dark_mode</span>
+                </div>
+                <div class="profile">
+                    <div class="profile-photo">
+                        <img src="assets/images/profile-1.jpg" alt="">
+                    </div>
+                    <h5>AVC</h5>
+                    <span class="material-icons-sharp">expand_more</span>
+                </div>
+                <button id="menu_btn">
+                    <span class="material-icons-sharp">menu</span>
+                </button>
+            </div>
+        </div>
+    </nav>
+    <!-- END OF NAVBAR-->
 </body>
 </html>
