--- a/AdminDashBoard/index.html
+++ b/AdminDashBoard/index.html
@@ -20,7 +20,7 @@
             <img src="assets/images/Asset%201x.png" alt="" class="logo">
             <div class="search-bar">
                 <span class="material-icons-sharp">search</span>
-                <input type="search">
+                <input type="search" placeholder="Search">
             </div>
             <div class="profile-area">
                 <div class="theme-btn">
